src/app/sidebar/sidebar.component.css
.sidenav-container {

  height: 100%;
}

.sidenav {
  width: min-content;
  
}

.sidenav .mat-toolbar {
  background: inherit;
}

.mat-toolbar.mat-primary {
  position: sticky;
  top: 0;
  z-index: 10;
}

#auth-div {
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
}

#log-logo {
  padding-right: 5px;
}


#logo-title {
  font-size: xx-large;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

